# eggviron

./: CONTRIBUTING.md  README.md  noxfile.py  pyproject.toml
.github/workflows/: python-tests.yml
requirements/: constraints.txt
src/eggviron/: __init__.py  _awsparamstore_loader.py  _eggviron.py  _envfile_loader.py  _environ_loader.py  eggviron.py  envfile_loader.py
tests/: awsparamstore_loader_noboto_test.py  awsparamstore_loader_test.py  conftest.py  eggviron_integration_test.py  eggviron_test.py  envfile_loader_test.py  environ_loader_test.py
