[build-system]
requires = [ "setuptools>=64", "setuptools_scm>=8" ]
build-backend = "setuptools.build_meta"

[project]
name = "eggviron"
requires-python = ">=3.10,<3.15"
description = "A library for loading and accessing environment variable values from various sources."
readme = "README.md"
license = "MIT"
authors = [
    { email = "preocts@preocts.com", name = "Preocts" },
]
maintainers = []
keywords = []
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
]
dynamic = [ "dependencies", "optional-dependencies", "version" ]

[tool.setuptools_scm]
# Purposely left empty

[tool.setuptools.dynamic.dependencies]
file = [ "requirements/requirements.txt" ]

[tool.setuptools.dynamic.optional-dependencies]
dev = { file = [ "requirements/requirements-dev.txt" ] }
test = { file = [ "requirements/requirements-test.txt" ] }

[project.urls]
homepage = "https://github.com/Preocts/eggviron"

[tool.setuptools.package-data]
"eggviron" = [ "py.typed" ]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_incomplete_defs = false
disallow_untyped_defs = false
warn_unused_ignores = false

[tool.coverage.run]
branch = true
source = [ "tests" ]
source_pkgs = [ "eggviron" ]

[tool.coverage.paths]
source = [ "src/", "*/site-packages" ]
test = [ "tests/", "*/tests" ]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "\\.\\.\\.",
    "if TYPE_CHECKING:",
]
